tests/snapshots/errors/map_new_wrong_args.mc
// Error: map::new() should not take any arguments
let m = map::new(16);
